# amazon-scraper

./: .gitignore  README.md  amazon_products_aa_battery.json  amazon_products_ac_A3K8GDUW67973J.json  amazon_scraper.py  browser_utils.py  config.py  downloader.py  extractor.py  pyproject.toml  requirements.txt
src/amazon_scraper/: __init__.py  browser.py  config.py  main.py
